# codeguard

./: README.md  action.yml  pyproject.toml
codeguardian/: __init__.py  cli.py  models.py  server.py
codeguardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codeguardian/core/: ai_reviewer.py  analyzer.py  diff_parser.py
codeguardian/core/rules/: base.py  patterns.py  performance.py  security.py
codeguardian/github/: client.py  webhook.py
tests/: test_analyzer.py  test_diff_parser.py  test_rules.py
