[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguardian"
version = "1.0.0"
description = "AI-powered Pull Request reviewer that detects bad patterns, security issues, and performance problems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pygithub>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
codeguardian = "codeguardian.cli:main"

[tool.setuptools.packages.find]
include = ["codeguardian*"]
